--- a/CSS Table/styles/reset.css
+++ b/CSS Table/styles/reset.css
@@ -1,4 +1,9 @@
-﻿* {
+﻿/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+* {
     box-sizing: border-box;
 }
 
@@ -22,7 +27,7 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
-
+/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
