--- a/CSS Form/styles/mainStyles.css
+++ b/CSS Form/styles/mainStyles.css
@@ -33,7 +33,7 @@ h1 {
     width: 100%;
     border: none;
     padding: 10px;
-    margin: 10px 0px 20px;
+    margin: 10px 0 20px;
 }
 
 .multi-field {
@@ -49,11 +49,16 @@ h1 {
     font-size: 16px;
     font-weight: bold;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 30px;
     border: none;
     background: #378DB2;
     color: #fff;
     float: right;
+}
+
+.button-submit:hover {
+    background-color: #32728d;
+    cursor: pointer;
 }
 
 .comment {
