fix jQ PhoneBook#1

--- a/jQ PhoneBook/styles/mainStyles.css
+++ b/jQ PhoneBook/styles/mainStyles.css
@@ -1,18 +1,10 @@
 ﻿body {
-    color: #676565;
     font-family: sans-serif;
 }
 
-main {
+.input-form, .input, .add-button, .remove-all-button {
     width: 100%;
-    max-width: 860px;
-    margin: 0 auto;
-    padding: 10px;
-}
-
-.input-form, .input, .add-button {
-    width: 100%;
-    max-width: 300px;
+    max-width: 400px;
     margin: 10px auto;
     font-size: 18px;
     padding: 10px;
